# django-tutorial

./: README.md
django-tutor/django-polls/: MANIFEST.in  README.rst  pyproject.toml  setup.cfg
django-tutor/django-polls/django_polls.egg-info/: PKG-INFO  SOURCES.txt
django-tutor/django-polls/polls/: admin.py  models.py  tests.py  views.py
django-tutor/django-polls/polls/migrations/: 0001_initial.py
django-tutor/django-polls/polls/static/polls/: style.css
django-tutor/django-polls/polls/templates/polls/: detail.html  index.html
django-tutor/mysite/: db.sqlite3
django-tutor/mysite/mysite/: settings.py
