[metadata]
name = django-polls
version = 0.1
description = A Django app to conduct web-based polls.
long_description = file: README.rst
url = http://www.example.com
author = Your name
author_email = yourname@example.com
license = BSD-3-Clause #example license
clasifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: X.Y #Replace "X.Y" as appropriate
    Intended Audience :: Developers
    license :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/http
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= X.Y # Replace "x.y" as appropriate
